# arvc_gazebo_ros_plugins

./: CMakeLists.txt  README.md  package.xml
include/arvc_gazebo_ros_plugins/: arvc_dataset_generator_utils.hpp  arvc_gazebo_ros_dataset_generator.h  arvc_gazebo_ros_model_move_v2.hpp  arvc_gazebo_ros_tf_publisher.h  arvc_gazebo_ros_world_tf.h  utils.hpp
launch/: launch_test.launch
models/: arvc_camera.sdf  model_test.sdf  simple_block_copy.sdf
models/TEST_MODEL/: model.config  model.sdf
models/simple_block/: model_copy.config  model_copy.sdf
src/: arvc_gazebo_collision_detector.cpp  arvc_gazebo_ros_dataset_generator.cpp  arvc_gazebo_ros_dataset_generator_copy_dev_collision_detection.cpp  arvc_gazebo_ros_model_move.cpp  arvc_gazebo_ros_model_move_v2.cpp  arvc_gazebo_ros_tf_publisher.cpp  arvc_gazebo_ros_world_tf.cpp  main.cpp
worlds/: empty_world.world
